Fixed visibility on mousein and mouseout

--- a/source/stylesheets/scatterplot.scss
+++ b/source/stylesheets/scatterplot.scss
@@ -18,6 +18,8 @@ body {
   border: solid 1px #CCCCCC;
   background-color: #FFFFFF;
 
+  visibility: hidden;
+
   margin: 25px;
   padding: 5px;
 
